--- a/app/src/main/res/layout/activity_plan_estudios.xml
+++ b/app/src/main/res/layout/activity_plan_estudios.xml
@@ -92,6 +92,68 @@
             android:gravity="center_horizontal"
             android:layout_gravity="center_horizontal"
             android:visibility="gone"/>
+        <TextView
+            android:id="@+id/materia1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="420dp"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginBottom="20dp">
+        </TextView>
+
+        <TextView
+            android:id="@+id/materia2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="450dp"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginBottom="20dp">
+        </TextView>
+
+        <TextView
+            android:id="@+id/materia3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="480dp"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginBottom="20dp">
+        </TextView>
+
+        <TextView
+            android:id="@+id/materia4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="510dp"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginBottom="20dp">
+        </TextView>
+
+        <TextView
+            android:id="@+id/materia5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="540dp"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginBottom="20dp">
+        </TextView>
+
+        <TextView
+            android:id="@+id/materia6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="570dp"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginBottom="20dp">
+        </TextView>
+
+        <TextView
+            android:id="@+id/materia7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="600dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginHorizontal="30dp">
+        </TextView>
     </FrameLayout>
 
     <com.google.android.material.imageview.ShapeableImageView
