--- a/app/src/main/res/layout/cascaron_taller_civico.xml
+++ b/app/src/main/res/layout/cascaron_taller_civico.xml
@@ -5,8 +5,8 @@
     style="@style/Widget.Material3.CardView.Elevated"
     android:layout_width="match_parent"
     android:layout_height="295dp"
-    app:cardCornerRadius="10dp"
     android:layout_margin="30dp"
+    app:cardCornerRadius="10dp"
     app:cardElevation="8dp">
 
     <LinearLayout
@@ -19,8 +19,7 @@
             android:id="@+id/imagen"
             android:layout_width="145dp"
             android:layout_height="match_parent"
-            android:scaleType="center"
-             />
+            android:scaleType="center" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,15 +27,36 @@
             android:orientation="vertical"
             android:padding="16dp">
 
-            <TextView
-                android:id="@+id/textTitulo"
-                android:layout_width="130dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAlignment="viewStart"
-                android:textAppearance="?attr/textAppearanceHeadline6"
-                android:textColor="#070D7A"
-                android:textSize="16dp"
-                android:textStyle="bold|italic" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textTitulo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="viewStart"
+                    android:textAppearance="?attr/textAppearanceHeadline6"
+                    android:textColor="#070D7A"
+                    android:textSize="16dp"
+                    android:textStyle="bold|italic" />
+
+                <ImageButton
+                    android:id="@+id/boton_delete_taller"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/delete"
+                    app:layout_constraintBottom_toBottomOf="@+id/image_view"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/image_view"
+                    android:layout_gravity="right"
+                    />
+
+            </LinearLayout>
+
 
             <TextView
                 android:layout_width="wrap_content"
